# MVGFahrinfo

./: Cargo.toml  LICENSE  README.md  stations.json
.github/: FUNDING.yml
src/: api.rs  app.rs  constants.rs  event.rs  main.rs  tui.rs  ui.rs  update.rs
src/components/: mod.rs  static_widgets.rs  station_list.rs
