[package]
name = "mvgfahrinfo"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1"
ratatui = "0.23.0"
crossterm = "0.27.0"
chrono = "0.4.31"
phf = { version = "0.11", features = ["macros"] }