[package]
name = "mvgfahrinfo"
description = "Get up-to-date departure times for Munich public transport in your terminal."
version = "1.1.0"
edition = "2021"

author = "Faisal Ahmed"
include = [
	"src/**/*",
	"Cargo.toml",
	"README.md",
	"LICENCE"
]
homepage = "https://github.com/FaisalBinAhmed/MVGFahrinfo"
repository = "https://github.com/FaisalBinAhmed/MVGFahrinfo"
keywords = [
	"cli",
	"munich",
    "public-transport",
    "mvg",
    "ubahn"
]
categories = ["command-line-interface"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] } # for http requests
tokio = { version = "1", features = ["full"] } # for async runtime
serde_json = "1" # for json parsing
serde = { version = "1.0", features = ["derive"] } # for serialization and deserialization
anyhow = "1" # for generic error handling
ratatui = "0.23.0" # terminal ui framework
crossterm = "0.27.0" # for terminal manipulation
chrono = "0.4.31" # for date and time
phf = { version = "0.11", features = ["macros"] } # for static hashmap